fix bugs Fixed title being too big when on mobile devices. Also changed sensitivity of nav bar transparency

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -187,7 +187,7 @@ and (min-device-width : 320px)
 and (max-device-width : 480px) {
   /* Styles */
   .jumbotron .motto,
-  .hero-title .motto {
+  .hero-title .heading {
     font-size: 32px;
   }
 
@@ -219,7 +219,6 @@ and (max-device-width : 1024px) {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    /*max-width: 730px;*/
     max-width: 800px;
     width: 100%;
   }
